--- a/MauiBottomSheetSample/MauiBottomSheetSample.csproj
+++ b/MauiBottomSheetSample/MauiBottomSheetSample.csproj
@@ -50,6 +50,13 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="The49.Maui.BottomSheet" Version="1.0.0-alpha4" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="MyBottomSheet.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
